# Projeto-PLN

./: README.md  clustering.py  funcoes_limpeza_texto.py  funcoes_preprocessamento.py  main.ipynb  pdfs_para_txt.py  pyproject.toml
data/caps/: bras_cubas_machado_cap_3.txt  dom_casmurro_machado_cap_1.txt  dom_casmurro_machado_cap_2.txt  iracema_jose_de_alencar_cap_1.txt  iracema_jose_de_alencar_cap_2.txt  iracema_jose_de_alencar_cap_4.txt  o_cortico_aluisio_azevedo_cap_1.txt  o_cortico_aluisio_azevedo_cap_4.txt
data/caps_nao_usados/: bras_cubas_machado_cap_2.txt  bras_cubas_machado_cap_4.txt  o_mulato_aluisio_azevedo_cap_1.txt  o_mulato_aluisio_azevedo_cap_2.txt  o_mulato_aluisio_azevedo_cap_3.txt  o_mulato_aluisio_azevedo_cap_4.txt  senhora_jose_de_alencar_cap_1.txt  senhora_jose_de_alencar_cap_2.txt  senhora_jose_de_alencar_cap_4.txt
data/caps_processados/: dom_casmurro_machado_cap_3.txt  dom_casmurro_machado_cap_4.txt  iracema_jose_de_alencar_cap_3.txt  o_cortico_aluisio_azevedo_cap_2.txt  o_cortico_aluisio_azevedo_cap_3.txt  preprocessado_bras_cubas_machado_cap_1.json  preprocessado_bras_cubas_machado_cap_2.json  preprocessado_bras_cubas_machado_cap_3.json  preprocessado_bras_cubas_machado_cap_4.json  preprocessado_dom_casmurro_machado_cap_1.json  preprocessado_dom_casmurro_machado_cap_2.json  preprocessado_dom_casmurro_machado_cap_3.json  preprocessado_dom_casmurro_machado_cap_4.json  preprocessado_iracema_jose_de_alencar_cap_1.json  preprocessado_iracema_jose_de_alencar_cap_2.json  preprocessado_iracema_jose_de_alencar_cap_3.json  resultados.csv  (+17 more)
(+20 files in other folders)
