[project]
name = "projeto-pln"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "nltk>=3.9.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pymupdf>=1.25.5",
    "scipy>=1.15.2",
    "sentence-transformers>=4.1.0",
]
