[project]
name = "projeto-pln"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "featuretools>=1.31.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "pymupdf>=1.25.5",
    "scipy>=1.15.2",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.7",
]
